# overdose

./: .gitignore  AUTHORS  README  configure.ac  makefile.am  shell.nix
data/: makefile.am
data/md2/object/: crane_a.md2  crane_b.md2  crane_c.md2  crane_d.md2  crane_e.md2  excavator_b.md2  excavator_t.md2  forktruck.md2  fountan2.md2  policecar.md2
data/md2/player/: beelzabub.md2  billgates.md2  bong.md2  dgirl.md2  faust.md2  oddjob.md2  tigger.md2  vicar.md2
data/tex/.comments/: BuildingsTallHouse0034_S.jpg.xml
data/tex/player/: billgates.pcx  civi.tga  jack_demon.pcx  lala.pcx  tigger.pcx
doc/: makefile.am
doc/propuesta/: propuesta.tex
src/: makefile.am
src/dose/: exception.cpp  exception.hpp  main.cpp  overdose.cpp  overdose.hpp
src/dose/drug/: adrenaline.cpp  adrenaline.hpp  alcohol.cpp  alcohol.hpp  bubbly_camera.cpp  bubbly_camera.hpp  cocaine.cpp  cocaine.hpp  dope.cpp  dope.hpp  dope_effect.cpp  dope_effect.hpp  dope_factory.cpp  dope_factory.hpp  lsd.cpp  lsd.hpp  marihuana.cpp  marihuana.hpp
src/dose/ent/: building.cpp  building.hpp  dealer.cpp  dealer.hpp  empty.hpp  invisible.cpp  invisible.hpp  pedestrian.cpp  pedestrian.hpp  person.cpp  person.hpp  player.cpp  player.hpp  player_controller.cpp  player_controller.hpp  player_hud.cpp  player_hud.hpp  policeman.cpp  policeman.hpp
src/dose/st/: hell.cpp  hell.hpp  level.cpp  level.hpp  level_one.cpp  level_one.hpp  tester.cpp  tester.hpp
src/dose/tool/: fly_camera_controller.cpp  fly_camera_controller.hpp  follow_camera_controller.cpp  follow_camera_controller.hpp
src/lib/: file_ply_stl.cc  file_ply_stl.h  matrix.h  practica1.cc  practica2.cc  vertex.h
src/yage/app/: game_app.cpp  game_app.hpp  graphic_controller.cpp  graphic_controller.hpp  yage_app.cpp  yage_app.hpp
src/yage/base/: arg_parser.cpp  arg_parser.hpp  conf_backend_xml.cpp  conf_backend_xml.hpp  config.cpp  config.hpp  exception.cpp  exception.hpp  factory.hpp  factory_manager.cpp  factory_manager.hpp  factory_manager.tpp  file_finder.cpp  file_finder.hpp  file_manager.cpp  file_manager.hpp  handle_allocator.cpp  handle_allocator.hpp  iterator.hpp  logger.cpp  logger.hpp  misc.cpp  misc.hpp  observer.hpp  option_conf.hpp  point2.hpp  point2.tpp  point3.hpp  point3.tpp  point4.hpp  point4.tpp  pointer.hpp  singleton.cpp  singleton.hpp  singleton.tpp  threads.hpp  tree.cpp  tree.hpp  tree.tpp  type_traits.hpp  (+2 more)
src/yage/core/: file_resource_manager.cpp  file_resource_manager.hpp  file_resource_manager.tpp  font_manager.cpp  font_manager.hpp  graphic_system.cpp  graphic_system.hpp  input_system.cpp  input_system.hpp  key_observer.cpp  key_observer.hpp  mouse_observer.cpp  mouse_observer.hpp  resource_manager.cpp  resource_manager.hpp  resource_manager.tpp  sdl_wrapper.hpp  sound_system.cpp  sound_system.hpp  state_task.cpp  state_task.hpp  system.cpp  system.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp  timer.cpp  timer.cpp.old  timer.cpp~.old  timer.hpp  timer.hpp.old  timer.hpp~.old  trigger_task.hpp  video_observer.cpp  video_observer.hpp
src/yage/game/: collidable.cpp  collidable.hpp  collision_util.cpp  collision_util.hpp  dynamic_collision.cpp  dynamic_collision.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  entity_observer.cpp  entity_observer.hpp  state.cpp  state.hpp  state_manager.cpp  state_manager.hpp  static_collision.cpp  static_collision.hpp
src/yage/geo/: cone.cpp  cone.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  hemisphere.cpp  hemisphere.hpp  md2_model.cpp  md2_model.hpp  md2_model_impl.cpp  md2_model_impl.hpp  mesh.cpp  mesh.hpp  multi_mesh.cpp  multi_mesh.hpp  multi_textured_cube.cpp  multi_textured_cube.hpp  ply_model.cpp  ply_model.hpp  sphere.cpp  sphere.hpp  textured_hemisphere.cpp  textured_hemisphere.hpp  textured_plane.cpp  textured_plane.hpp  textured_plane_2d.cpp  textured_plane_2d.hpp
src/yage/gra/: animation.hpp  animation_task.cpp  animation_task.hpp  camera.cpp  camera.hpp  drawable.hpp  fog.cpp  fog.hpp  font.cpp  font.hpp  function_animation.hpp  geometry.hpp  geometry_proxy.cpp  geometry_proxy.hpp  light.cpp  light.hpp  material.cpp  material.hpp  scene.cpp  scene.hpp  scene_node.cpp  scene_node.hpp  static_drawable.cpp  static_drawable.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp
tools/: buildman  countlines.sh  mkdoc.sh
